# learnrust

./: Cargo.toml  readme.md  rustfmt.toml
codec/: Cargo.toml
codec/src/: error.rs  lib.rs  message.rs
learnaxum/: .env  Cargo.toml
learnaxum/migrations/2022-10-16-144453_user_info/: up.sql
learnaxum/migrations/2022-10-16-155450_user_info/: up.sql
learnaxum/src/: core.rs  db.rs  main.rs  model.rs  opts.rs  rcache.rs  routers.rs  schema.rs  state.rs  user_service.rs
learnerror/: Cargo.toml
learnerror/src/: exception.rs  main.rs
learnfs/: Cargo.toml
learnfs/src/: main.rs
learngeneric/: Cargo.toml
learngeneric/src/: inter.rs  main.rs  ops.rs  point.rs
learnlog/: Cargo.toml
learnnet/: Cargo.toml
learnnet/src/: http_cli.rs  main.rs  tcp.rs  tokio_tcp.rs
serialization/: Cargo.toml
serialization/src/: input.json  main.rs  model.rs  util.rs
