[workspace]
members = [
    "learnerror",
    "learnlog",
    "learnfs",
    "learnnet",
    "learngeneric",
    "codec",
    "serialization",
    "learnaxum",
]

resolver = "2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false
