[package]
name = "learnaxum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.5"
tokio = { version = "1.21", features = ["full"] }
redis = { version = "0.21.6", features = ["tokio-comp"] }
diesel = { version = "2.0", features = ["postgres"] }
dotenvy = "0.15"
lazy_static = "1.4"
serde = { version = "1.0", features = ["serde_derive"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tower = { version = "0.4", features = ["full"] }
serde_json = "1.0"
