[package]
name = "learnnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.21", features = ["full"] }
bytes = { version = "1", features = ["serde"] }
tokio-util = { version = "0.7", features = ["full"] }
codec = { path = "../codec" }
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
